--- a/android/build.gradle
+++ b/android/build.gradle
@@ -121,5 +121,5 @@ repositories {
 dependencies {
   // noinspection GradleDynamicVersion
   api 'com.facebook.react:react-native:+'
-  implementation 'com.tencent.qcloud:cosxml:5.5.+'
+  implementation 'com.tencent.qcloud:cosxml:5.6.1'
 }
