--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cos-xml-react-native-fix-upload",
+  "name": "@apprush/cos-xml-react-native",
   "version": "1.0.2",
   "description": "Tencent COS XML SDK for React Native",
   "main": "lib/commonjs/index",
@@ -51,11 +51,11 @@
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.13",
-    "commitlint": "^8.3.5",
+    "commitlint": "^12.1.1",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
+    "husky": "^6.0.0",
     "jest": "^26.0.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
@@ -140,5 +140,8 @@
       "module",
       "typescript"
     ]
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
